@@ -1308,7 +1308,7 @@ public class RecordsRestrictedClassTest extends AbstractRegressionTest {
 			"2. ERROR in X.java (at line 12)\n" +
 			"	public Point(Integer myInt) {}\n" +
 			"	       ^^^^^^^^^^^^^^^^^^^^\n" +
-			"A non-canonical constructor must start with an explicit invocation to a constructor\n" +
+			"A non-canonical constructor must invoke another constructor of the same class\n" +
 			"----------\n");
 	}
 	public void testBug553152_016() {
@@ -2404,7 +2404,7 @@ public void testBug558718_001() {
 		"1. ERROR in X.java (at line 1)\n" +
 		"	record R() {}\n" +
 		"	^\n" +
-		"The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 24 and above\n" +
+		"The Java feature 'Compact Source Files and Instance Main Methods' is only available with source level 25 and above\n" +
 		"----------\n" +
 		"2. ERROR in X.java (at line 1)\n" +
 		"	record R() {}\n" +
@@ -4562,7 +4562,7 @@ public void testBug562637_001() {
 			"1. ERROR in X.java (at line 2)\n" +
 			"	public X() {\n" +
 			"	       ^^^\n" +
-			"A non-canonical constructor must start with an explicit invocation to a constructor\n" +
+			"A non-canonical constructor must invoke another constructor of the same class\n" +
 			"----------\n");
 	}
 	public void testBug564146_002() {
@@ -4577,10 +4577,10 @@ public void testBug562637_001() {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 2)\n" +
-			"	public X() {\n" +
-			"	       ^^^\n" +
-			"A non-canonical constructor must start with an explicit invocation to a constructor\n" +
+			"1. ERROR in X.java (at line 3)\n" +
+			"	super();\n" +
+			"	^^^^^^^^\n" +
+			"A non-canonical constructor must invoke another constructor of the same class\n" +
 			"----------\n");
 	}
 	public void testBug564146_003() {
@@ -7918,11 +7918,13 @@ public void testBug566846_1() {
 				"X.java",
 				"public record X;\n"
 			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 1)\n" +
-			"	public record X;\n" +
-			"	^\n" +
-			"Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable\n" +
+			(this.complianceLevel < ClassFileConstants.JDK25 ?
+					"----------\n"
+					+ "1. ERROR in X.java (at line 1)\n"
+					+ "	public record X;\n"
+					+ "	^\n"
+					+ "The Java feature 'Compact Source Files and Instance Main Methods' is only available with source level 25 and above\n"
+					: "") +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public record X;\n" +
@@ -7947,11 +7949,13 @@ public void testBug566846_2() {
 				+ "} \n"
 				+ "record R1;\n"
 			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 1)\n" +
-			"	public class X {\n" +
-			"	^\n" +
-			"Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable\n" +
+			(this.complianceLevel < ClassFileConstants.JDK25 ?
+					"----------\n"
+					+ "1. ERROR in X.java (at line 1)\n"
+					+ "	public class X {\n"
+					+ "	^\n"
+					+ "The Java feature 'Compact Source Files and Instance Main Methods' is only available with source level 25 and above\n"
+					: "") +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public class X {\n" +
@@ -8138,7 +8142,7 @@ public void testBug571015_002() {
 			"1. ERROR in X.java (at line 2)\n" +
 			"	R(I<X> ... t) {}\n" +
 			"	^^^^^^^^^^^^^\n" +
-			"A non-canonical constructor must start with an explicit invocation to a constructor\n" +
+			"A non-canonical constructor must invoke another constructor of the same class\n" +
 			"----------\n" +
 			"2. WARNING in X.java (at line 2)\n" +
 			"	R(I<X> ... t) {}\n" +
@@ -8456,11 +8460,13 @@ public void testBug571765_001() {
 					"module-info.java",
 					"public record R() {}\n",
 				},
-			"----------\n" +
-			"1. ERROR in module-info.java (at line 1)\n" +
-			"	public record R() {}\n" +
-			"	^\n" +
-			"Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable\n" +
+			(this.complianceLevel < ClassFileConstants.JDK25 ?
+				"----------\n"
+				+ "1. ERROR in module-info.java (at line 1)\n"
+				+ "	public record R() {}\n"
+				+ "	^\n"
+				+ "The Java feature 'Compact Source Files and Instance Main Methods' is only available with source level 25 and above\n"
+				: "") +
 			"----------\n" +
 			"2. ERROR in module-info.java (at line 1)\n" +
 			"	public record R() {}\n" +
@@ -9696,7 +9702,7 @@ public void testGH3891() {
 		""");
 }
 public void testGH3891_preview() {
-	if (this.complianceLevel < ClassFileConstants.JDK24) return;
+	if (this.complianceLevel < ClassFileConstants.JDK25) return;
 	Runner runner = new Runner();
 	runner.customOptions = getCompilerOptions();
 	runner.customOptions.put(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, JavaCore.ENABLED);
@@ -10654,5 +10660,1032 @@ public void testIssue4070() {
 	            },
 		"OK!"
 		);
+}
+
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4146
+// Unable to build Record
+public void testIssue4146() {
+	this.runNegativeTest(
+		new String[] {
+					"Segment.java",
+					"""
+					package repro;
+
+					import com.fasterxml.jackson.annotation.JsonInclude;
+					import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
+
+					public record Segment(@JacksonXmlProperty(isAttribute = true) String id,
+					                      String source,
+					                      @JsonInclude(JsonInclude.Include.NON_NULL) String target) {
+
+					}
+					""",
+	            },
+		"----------\n" +
+		"1. ERROR in Segment.java (at line 3)\r\n" +
+		"	import com.fasterxml.jackson.annotation.JsonInclude;\r\n" +
+		"	       ^^^^^^^^^^^^^\n" +
+		"The import com.fasterxml cannot be resolved\n" +
+		"----------\n" +
+		"2. ERROR in Segment.java (at line 4)\r\n" +
+		"	import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;\r\n" +
+		"	       ^^^^^^^^^^^^^\n" +
+		"The import com.fasterxml cannot be resolved\n" +
+		"----------\n" +
+		"3. ERROR in Segment.java (at line 6)\r\n" +
+		"	public record Segment(@JacksonXmlProperty(isAttribute = true) String id,\r\n" +
+		"	                       ^^^^^^^^^^^^^^^^^^\n" +
+		"JacksonXmlProperty cannot be resolved to a type\n" +
+		"----------\n" +
+		"4. ERROR in Segment.java (at line 8)\r\n" +
+		"	@JsonInclude(JsonInclude.Include.NON_NULL) String target) {\r\n" +
+		"	 ^^^^^^^^^^^\n" +
+		"JsonInclude cannot be resolved to a type\n" +
+		"----------\n" +
+		"5. ERROR in Segment.java (at line 8)\r\n" +
+		"	@JsonInclude(JsonInclude.Include.NON_NULL) String target) {\r\n" +
+		"	             ^^^^^^^^^^^\n" +
+		"JsonInclude cannot be resolved to a variable\n" +
+		"----------\n");
+}
+
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4146
+// Unable to build Record
+public void testIssue4146_2() {
+	this.runNegativeTest(
+		new String[] {
+					"Segment.java",
+					"""
+					package repro;
+
+					import com.fasterxml.jackson.annotation.JsonInclude;
+					import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
+
+					public record Segment(@JacksonXmlProperty(isAttribute = true) String id,
+					                      @JsonInclude(JsonInclude.Include.NON_NULL) String target,
+					                      String source) {
+
+					}
+					""",
+	            },
+		"----------\n" +
+		"1. ERROR in Segment.java (at line 3)\n" +
+		"	import com.fasterxml.jackson.annotation.JsonInclude;\n" +
+		"	       ^^^^^^^^^^^^^\n" +
+		"The import com.fasterxml cannot be resolved\n" +
+		"----------\n" +
+		"2. ERROR in Segment.java (at line 4)\n" +
+		"	import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;\n" +
+		"	       ^^^^^^^^^^^^^\n" +
+		"The import com.fasterxml cannot be resolved\n" +
+		"----------\n" +
+		"3. ERROR in Segment.java (at line 6)\n" +
+		"	public record Segment(@JacksonXmlProperty(isAttribute = true) String id,\n" +
+		"	                       ^^^^^^^^^^^^^^^^^^\n" +
+		"JacksonXmlProperty cannot be resolved to a type\n" +
+		"----------\n" +
+		"4. ERROR in Segment.java (at line 7)\n" +
+		"	@JsonInclude(JsonInclude.Include.NON_NULL) String target,\n" +
+		"	 ^^^^^^^^^^^\n" +
+		"JsonInclude cannot be resolved to a type\n" +
+		"----------\n" +
+		"5. ERROR in Segment.java (at line 7)\n" +
+		"	@JsonInclude(JsonInclude.Include.NON_NULL) String target,\n" +
+		"	             ^^^^^^^^^^^\n" +
+		"JsonInclude cannot be resolved to a variable\n" +
+		"----------\n");
+}
+
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4146
+// Unable to build Record
+public void testIssue4146_3() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"Segment.java",
+					"""
+					import jackson.stuff.JacksonXmlProperty;
+					import jackson.stuff.JsonInclude;
+
+					public record Segment(@JacksonXmlProperty(isAttribute = true) String id,
+					                      String source,
+					                      @JsonInclude(JsonInclude.Include.NON_NULL) String target) {
+
+						public static void main(String [] args) {
+							System.out.println("OK!");
+						}
+					}
+					""",
+					"jackson/stuff/JacksonXmlProperty.java",
+					"""
+					package jackson.stuff;
+					import java.lang.annotation.ElementType;
+					import java.lang.annotation.Retention;
+					import java.lang.annotation.RetentionPolicy;
+					import java.lang.annotation.Target;
+
+					@Target({ElementType.ANNOTATION_TYPE, ElementType.FIELD, ElementType.METHOD, ElementType.PARAMETER})
+					@Retention(RetentionPolicy.RUNTIME)
+					public @interface JacksonXmlProperty {
+					    boolean isAttribute() default false;
+					}
+					""",
+					"jackson/stuff/JsonInclude.java",
+					"""
+					package jackson.stuff;
+
+					import java.lang.annotation.ElementType;
+					import java.lang.annotation.Target;
+
+					@Target({ElementType.METHOD, ElementType.FIELD, ElementType.TYPE, ElementType.PARAMETER})
+					@JacksonAnnotation
+					public @interface JsonInclude {
+					    public enum Include {
+					    	ALWAYS,
+					        NON_NULL;
+					    }
+					    public Include value() default Include.ALWAYS;
+					}
+					""",
+					"jackson/stuff/JacksonAnnotation.java",
+					"""
+					package jackson.stuff;
+
+					import java.lang.annotation.ElementType;
+					import java.lang.annotation.Retention;
+					import java.lang.annotation.RetentionPolicy;
+					import java.lang.annotation.Target;
+
+					@Target({ElementType.ANNOTATION_TYPE})
+					@Retention(RetentionPolicy.RUNTIME)
+					public @interface JacksonAnnotation {
+
+					}
+					"""
+	            },
+				"OK!");
+
+	String expectedOutput =
+					"  // Field descriptor #6 Ljava/lang/String;\n" +
+					"  private final java.lang.String id;\n" +
+					"    RuntimeVisibleAnnotations: \n" +
+					"      #8 @jackson.stuff.JacksonXmlProperty(\n" +
+					"        #9 isAttribute=true (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Field descriptor #6 Ljava/lang/String;\n" +
+					"  private final java.lang.String source;\n" +
+					"  \n" +
+					"  // Field descriptor #6 Ljava/lang/String;\n" +
+					"  private final java.lang.String target;\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #14 @jackson.stuff.JsonInclude(\n" +
+					"        #15 value=jackson.stuff.JsonInclude.Include.NON_NULL(enum type #16.#17)\n" +
+					"      )\n";
+	verifyClassFile(expectedOutput, "Segment.class", ClassFileBytesDisassembler.SYSTEM);
+
+	expectedOutput =
+			"  // Method descriptor #39 ()Ljava/lang/String;\n" +
+			"  // Stack: 1, Locals: 1\n" +
+			"  public java.lang.String id();\n" +
+			"    0  aload_0 [this]\n" +
+			"    1  getfield Segment.id : java.lang.String [40]\n" +
+			"    4  areturn\n" +
+			"      Line numbers:\n" +
+			"        [pc: 0, line: 4]\n" +
+			"    RuntimeVisibleAnnotations: \n" +
+			"      #8 @jackson.stuff.JacksonXmlProperty(\n" +
+			"        #9 isAttribute=true (constant type)\n" +
+			"      )\n" +
+			"  \n" +
+			"  // Method descriptor #39 ()Ljava/lang/String;\n" +
+			"  // Stack: 1, Locals: 1\n" +
+			"  public java.lang.String source();\n" +
+			"    0  aload_0 [this]\n" +
+			"    1  getfield Segment.source : java.lang.String [42]\n" +
+			"    4  areturn\n" +
+			"      Line numbers:\n" +
+			"        [pc: 0, line: 5]\n" +
+			"  \n" +
+			"  // Method descriptor #39 ()Ljava/lang/String;\n" +
+			"  // Stack: 1, Locals: 1\n" +
+			"  public java.lang.String target();\n" +
+			"    0  aload_0 [this]\n" +
+			"    1  getfield Segment.target : java.lang.String [44]\n" +
+			"    4  areturn\n" +
+			"      Line numbers:\n" +
+			"        [pc: 0, line: 6]\n" +
+			"    RuntimeInvisibleAnnotations: \n" +
+			"      #14 @jackson.stuff.JsonInclude(\n" +
+			"        #15 value=jackson.stuff.JsonInclude.Include.NON_NULL(enum type #16.#17)\n" +
+			"      )\n" +
+			"  \n";
+	verifyClassFile(expectedOutput, "Segment.class", ClassFileBytesDisassembler.SYSTEM);
+
+	expectedOutput =
+			"  // Method descriptor #61 (Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V\n" +
+			"  // Stack: 2, Locals: 4\n" +
+			"  public Segment(java.lang.String id, java.lang.String source, java.lang.String target);\n" +
+			"     0  aload_0 [this]\n" +
+			"     1  invokespecial java.lang.Record() [64]\n" +
+			"     4  aload_0 [this]\n" +
+			"     5  aload_1 [id]\n" +
+			"     6  putfield Segment.id : java.lang.String [40]\n" +
+			"     9  aload_0 [this]\n" +
+			"    10  aload_2 [source]\n" +
+			"    11  putfield Segment.source : java.lang.String [42]\n" +
+			"    14  aload_0 [this]\n" +
+			"    15  aload_3 [target]\n" +
+			"    16  putfield Segment.target : java.lang.String [44]\n" +
+			"    19  return\n" +
+			"      Line numbers:\n" +
+			"        [pc: 0, line: 1]\n" +
+			"      Method Parameters:\n" +
+			"        id\n" +
+			"        source\n" +
+			"        target\n" +
+			"    RuntimeVisibleParameterAnnotations: \n" +
+			"      Number of annotations for parameter 0: 1\n" +
+			"        #8 @jackson.stuff.JacksonXmlProperty(\n" +
+			"          #9 isAttribute=true (constant type)\n" +
+			"        )\n" +
+			"      Number of annotations for parameter 1: 0\n" +
+			"      Number of annotations for parameter 2: 0\n" +
+			"    RuntimeInvisibleParameterAnnotations: \n" +
+			"      Number of annotations for parameter 0: 0\n" +
+			"      Number of annotations for parameter 1: 0\n" +
+			"      Number of annotations for parameter 2: 1\n" +
+			"        #14 @jackson.stuff.JsonInclude(\n" +
+			"          #15 value=jackson.stuff.JsonInclude.Include.NON_NULL(enum type #16.#17)\n" +
+			"        )\n" +
+			"\n";
+	verifyClassFile(expectedOutput, "Segment.class", ClassFileBytesDisassembler.SYSTEM);
+
+}
+public void testIssue4290() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"X.java",
+					"""
+					public class X {
+					    public Object a() {
+					        return new Object() {
+					            static record A(Object  a, Object b) {}
+					        };
+					    }
+					    public static void main(String[] args) {
+							System.out.println("OK");
+						}
+					}
+					""",
+	            },
+				"OK");
+
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4412
+// Internal Compile error problem since 2025-09
+public void testIssue4412() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"R.java",
+					"""
+					import java.util.Collection;
+					import java.util.stream.Collectors;
+
+					@interface A {
+
+					    Id use();
+
+					    public enum Id {
+					        CLASS;
+					    }
+					}
+
+					public record R<V>(String name, @A(use = A.Id.CLASS) V value) {
+
+					    @Override
+					    public String toString() {
+					        return String.format("[%s] %s",
+					                             name,
+					                             (value instanceof Collection<?> coll
+					                                     ? coll.stream().map(Object::toString).collect(Collectors.joining(", ", "[ ", " ]"))
+					                                     : value.toString()));
+					    }
+
+					    public static void main(String [] args) {
+					    	System.out.println("OK!");
+					    }
+					}
+					""",
+	            },
+				"OK!");
+
+}
+public void testDeprecation_type() {
+	Runner runner = new Runner();
+	runner.testFiles = new String[] {
+		"X.java",
+		"""
+		@Deprecated record R(int i, boolean f) {}
+		public class X {
+			R test() {
+				return new R(1,false);
+			}
+		}
+		"""
+		};
+	runner.expectedCompilerLog =
+		"""
+		----------
+		1. WARNING in X.java (at line 3)
+			R test() {
+			^
+		The type R is deprecated
+		----------
+		2. WARNING in X.java (at line 4)
+			return new R(1,false);
+			           ^
+		The type R is deprecated
+		----------
+		""";
+	runner.runWarningTest();
+}
+public void testDeprecation_altCtor() {
+	Runner runner = new Runner();
+	runner.testFiles = new String[] {
+		"X.java",
+		"""
+		record R(int i, boolean f) {
+			@Deprecated R(int i) {
+				this(i, i>0);
+			}
+			R {
+				i = Math.abs(i);
+			}
+		}
+		public class X {
+			R test(int in) {
+				return switch(in) {
+					case 0 -> new R(0);
+					case 1 -> new R(1, false);
+					default -> null;
+				};
+			}
+		}
+		"""
+		};
+	runner.expectedCompilerLog =
+		"""
+		----------
+		1. WARNING in X.java (at line 12)
+			case 0 -> new R(0);
+			              ^
+		The constructor R(int) is deprecated
+		----------
+		""";
+	runner.runWarningTest();
+}
+public void testDeprecation_compactCtor() {
+	Runner runner = new Runner();
+	runner.testFiles = new String[] {
+		"X.java",
+		"""
+		record R(int i, boolean f) {
+			R(int i) {
+				this(i, i>0);
+			}
+			@Deprecated R {
+				i = Math.abs(i);
+			}
+		}
+		public class X {
+			R test(int in) {
+				return switch(in) {
+					case 0 -> new R(0);
+					case 1 -> new R(1, false);
+					default -> null;
+				};
+			}
+		}
+		"""
+		};
+	runner.expectedCompilerLog =
+		"""
+		----------
+		1. WARNING in X.java (at line 13)
+			case 1 -> new R(1, false);
+			              ^
+		The constructor R(int, boolean) is deprecated
+		----------
+		""";
+	runner.runWarningTest();
+}
+public void testDeprecation_accessor() {
+	Runner runner = new Runner();
+	runner.testFiles = new String[] {
+		"X.java",
+		"""
+		record R(int i, boolean f) {
+			@Deprecated public int i() {
+				return this.i;
+			}
+		}
+		public class X {
+			int test1() {
+				return new R(1,false).i();
+			}
+			boolean test2() {
+				return new R(1,false).f();
+			}
+		}
+		"""
+		};
+	runner.expectedCompilerLog =
+		"""
+		----------
+		1. WARNING in X.java (at line 8)
+			return new R(1,false).i();
+			                      ^
+		The method i() from the type R is deprecated
+		----------
+		""";
+	runner.runWarningTest();
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4551
+// ECJ fails on Record used within Enum in Annotation
+public void testIssue4551() throws Exception {
+	this.runNegativeTest(
+		new String[] {
+					"X.java",
+					"""
+					public record X(
+					  @ExampleAnnotation(value = { ExampleEnum.VALUE })
+					  String string) {
+
+					  @Target(ElementType.FIELD)
+					  public @interface ExampleAnnotation {
+					  	ExampleEnum[] value();
+					  }
+					}
+
+					enum ExampleEnum {
+					  VALUE(new SecondExampleRecord());
+
+					  private ExampleEnum(SecondExampleRecord exampleRecord) { }
+					}
+
+					record SecondExampleRecord() {
+					}
+					""",
+	            },
+				"----------\n" +
+				"1. ERROR in X.java (at line 5)\r\n" +
+				"	@Target(ElementType.FIELD)\r\n" +
+				"	 ^^^^^^\n" +
+				"Target cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 5)\r\n" +
+				"	@Target(ElementType.FIELD)\r\n" +
+				"	        ^^^^^^^^^^^\n" +
+				"ElementType cannot be resolved to a variable\n" +
+				"----------\n");
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4551
+// ECJ fails on Record used within Enum in Annotation
+public void testIssue4551_2() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"mypackage/Test.java",
+					"""
+					package mypackage;
+
+
+					import java.lang.annotation.Target;
+					import java.lang.reflect.Method;
+					import java.lang.reflect.Modifier;
+
+					import static java.lang.annotation.ElementType.*;
+					import java.lang.annotation.Retention;
+					import java.lang.annotation.RetentionPolicy;
+					import java.math.BigDecimal;
+
+					import static mypackage.Test.TOPIC;
+
+
+					public record Test(
+					        @Schema(requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+					        @JsonProperty("test") BigDecimal test
+
+					) {
+					        public static final String TOPIC = "test";
+
+					        public static void main(String[] args) {
+					        	Method[] methods = Test.class.getDeclaredMethods();
+
+					            for (Method method : methods) {
+					                // Get modifiers, return type, and name
+					                String modifiers = Modifier.toString(method.getModifiers());
+					                String returnType = method.getReturnType().getSimpleName();
+					                String name = method.getName();
+
+					                // Get parameter types
+					                Class<?>[] params = method.getParameterTypes();
+					                StringBuilder paramList = new StringBuilder();
+					                for (int i = 0; i < params.length; i++) {
+					                    if (i > 0) paramList.append(", ");
+					                    paramList.append(params[i].getSimpleName());
+					                }
+
+					                // Print it out
+					                System.out.printf("%s %s %s(%s)%n", modifiers, returnType, name, paramList);
+					            }
+							}
+					}
+
+
+					@Target({FIELD, METHOD, PARAMETER, TYPE, ANNOTATION_TYPE})
+					@Retention(RetentionPolicy.RUNTIME)
+					@interface Schema {
+						enum RequiredMode {
+						    AUTO,
+						    REQUIRED,
+						    NOT_REQUIRED;
+						}
+						static enum AccessMode {
+					        AUTO,
+					        READ_ONLY,
+					        WRITE_ONLY,
+					        READ_WRITE;
+					    }
+					    String name() default "";
+					    String title() default "";
+					    String description() default "";
+					    Class<?> implementation() default Void.class;
+					    AccessMode accessMode() default AccessMode.AUTO;
+					    RequiredMode requiredMode() default RequiredMode.AUTO;
+					    boolean hidden() default false;
+					    // … many more elements …
+					}
+
+					@Target({ANNOTATION_TYPE, FIELD, METHOD, PARAMETER})
+					@Retention(RetentionPolicy.RUNTIME)
+					@interface JsonProperty {
+					    String value() default "";
+					    boolean required() default false;
+					    int index() default -1;
+					    String defaultValue() default "";
+					   // Access access() default Access.AUTO;
+					    String namespace() default "";
+					    // …
+					}
+					""",
+	            },
+				"public static void main(String[])\n" +
+				"public final boolean equals(Object)\n" +
+				"public final String toString()\n" +
+				"public final int hashCode()\n" +
+				"public BigDecimal test()");
+
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4616
+// NPE because annotation.resolvedType is null
+public void testIssue4616() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"test/Broken.java",
+					"""
+					package test;
+
+					import test.Schema.RequiredMode;
+
+					public record Broken(@Schema(description = "str", requiredMode = RequiredMode.REQUIRED) @JsonProperty("str")  Broken.UpsertEnvironmentDto environment) {
+						public record UpsertEnvironmentDto() {}
+						public static void main(String [] args) {
+						    System.out.println("OK!");
+						}
+					}
+
+					@interface JsonProperty {
+						String value();
+					}
+
+					@interface Schema {
+
+					    RequiredMode requiredMode();
+
+					    String description();
+
+					    enum RequiredMode {
+					        REQUIRED,
+					    }
+					}
+					""",
+	            },
+				"OK!");
+
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4616
+// NPE because annotation.resolvedType is null
+public void testIssue4616_fuller() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"test/Broken.java",
+					"""
+					package test;
+
+					import test.Schema.RequiredMode;
+
+					import java.util.Map;
+
+					public record Broken(
+
+					        @Schema(description = "str", requiredMode = RequiredMode.NOT_REQUIRED) @JsonProperty("str")  String externalAccountId,
+
+					        @Schema(description = "str", requiredMode = RequiredMode.REQUIRED) @JsonProperty("str") String productId,
+
+					        @Schema(description = "str", requiredMode = RequiredMode.REQUIRED) @JsonProperty("str") Broken.UpsertEnvironmentDto environment,
+
+					        @Schema(description = \"\"\"
+					            str\"\"\", requiredMode = RequiredMode.NOT_REQUIRED) @JsonProperty("str") Map<String, String> metadata) {
+					    public record UpsertEnvironmentDto(
+
+					            @Schema(description = "str", requiredMode = RequiredMode.REQUIRED) @JsonProperty("str") String id,
+
+					            @Schema(description = "str", requiredMode = RequiredMode.REQUIRED) @JsonProperty("str") String url) {
+
+					    }
+					    public static void main(String [] args) {
+						    System.out.println("OK!");
+						}
+					}
+
+
+					@interface JsonProperty {
+						String value();
+					}
+
+					@interface Schema {
+
+					    RequiredMode requiredMode();
+
+					    String description();
+
+					    enum RequiredMode {
+					        REQUIRED,
+					        NOT_REQUIRED,
+					    }
+					}
+					""",
+	            },
+				"OK!");
+	String expectedOutput =
+					"  // Field descriptor #6 Ljava/lang/String;\n" +
+					"  private final java.lang.String externalAccountId;\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Field descriptor #6 Ljava/lang/String;\n" +
+					"  private final java.lang.String productId;\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Field descriptor #19 Ltest/Broken$UpsertEnvironmentDto;\n" +
+					"  private final test.Broken$UpsertEnvironmentDto environment;\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Field descriptor #21 Ljava/util/Map;\n" +
+					"  // Signature: Ljava/util/Map<Ljava/lang/String;Ljava/lang/String;>;\n" +
+					"  private final java.util.Map metadata;\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #25 ([Ljava/lang/String;)V\n" +
+					"  // Stack: 2, Locals: 1\n" +
+					"  public static void main(java.lang.String[] args);\n" +
+					"    0  getstatic java.lang.System.out : java.io.PrintStream [27]\n" +
+					"    3  ldc <String \"OK!\"> [33]\n" +
+					"    5  invokevirtual java.io.PrintStream.println(java.lang.String) : void [35]\n" +
+					"    8  return\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 25]\n" +
+					"        [pc: 8, line: 26]\n" +
+					"      Local variable table:\n" +
+					"        [pc: 0, pc: 9] local: args index: 0 type: java.lang.String[]\n" +
+					"  \n" +
+					"  // Method descriptor #45 ()Ljava/lang/String;\n" +
+					"  // Stack: 1, Locals: 1\n" +
+					"  public java.lang.String externalAccountId();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  getfield test.Broken.externalAccountId : java.lang.String [46]\n" +
+					"    4  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 9]\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #45 ()Ljava/lang/String;\n" +
+					"  // Stack: 1, Locals: 1\n" +
+					"  public java.lang.String productId();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  getfield test.Broken.productId : java.lang.String [48]\n" +
+					"    4  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 11]\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #50 ()Ltest/Broken$UpsertEnvironmentDto;\n" +
+					"  // Stack: 1, Locals: 1\n" +
+					"  public test.Broken.UpsertEnvironmentDto environment();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  getfield test.Broken.environment : test.Broken.UpsertEnvironmentDto [51]\n" +
+					"    4  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 13]\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #53 ()Ljava/util/Map;\n" +
+					"  // Signature: ()Ljava/util/Map<Ljava/lang/String;Ljava/lang/String;>;\n" +
+					"  // Stack: 1, Locals: 1\n" +
+					"  public java.util.Map metadata();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  getfield test.Broken.metadata : java.util.Map [55]\n" +
+					"    4  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 16]\n" +
+					"    RuntimeInvisibleAnnotations: \n" +
+					"      #8 @test.Schema(\n" +
+					"        #9 description=\"str\" (constant type)\n" +
+					"        #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"      )\n" +
+					"      #14 @test.JsonProperty(\n" +
+					"        #15 value=\"str\" (constant type)\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #45 ()Ljava/lang/String;\n" +
+					"  // Stack: 2, Locals: 1\n" +
+					"  public final java.lang.String toString();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  invokedynamic 0 toString(test.Broken) : java.lang.String [58]\n" +
+					"    6  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 1]\n" +
+					"  \n" +
+					"  // Method descriptor #62 ()I\n" +
+					"  // Stack: 2, Locals: 1\n" +
+					"  public final int hashCode();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  invokedynamic 0 hashCode(test.Broken) : int [63]\n" +
+					"    6  ireturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 1]\n" +
+					"  \n" +
+					"  // Method descriptor #67 (Ljava/lang/Object;)Z\n" +
+					"  // Stack: 2, Locals: 2\n" +
+					"  public final boolean equals(java.lang.Object arg0);\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  aload_1 [arg0]\n" +
+					"    2  invokedynamic 0 equals(test.Broken, java.lang.Object) : boolean [68]\n" +
+					"    7  ireturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 1]\n" +
+					"  \n" +
+					"  // Method descriptor #72 (Ljava/lang/String;Ljava/lang/String;Ltest/Broken$UpsertEnvironmentDto;Ljava/util/Map;)V\n" +
+					"  // Signature: (Ljava/lang/String;Ljava/lang/String;Ltest/Broken$UpsertEnvironmentDto;Ljava/util/Map<Ljava/lang/String;Ljava/lang/String;>;)V\n" +
+					"  // Stack: 2, Locals: 5\n" +
+					"  public Broken(java.lang.String externalAccountId, java.lang.String productId, test.Broken.UpsertEnvironmentDto environment, java.util.Map metadata);\n" +
+					"     0  aload_0 [this]\n" +
+					"     1  invokespecial java.lang.Record() [75]\n" +
+					"     4  aload_0 [this]\n" +
+					"     5  aload_1 [externalAccountId]\n" +
+					"     6  putfield test.Broken.externalAccountId : java.lang.String [46]\n" +
+					"     9  aload_0 [this]\n" +
+					"    10  aload_2 [productId]\n" +
+					"    11  putfield test.Broken.productId : java.lang.String [48]\n" +
+					"    14  aload_0 [this]\n" +
+					"    15  aload_3 [environment]\n" +
+					"    16  putfield test.Broken.environment : test.Broken.UpsertEnvironmentDto [51]\n" +
+					"    19  aload_0 [this]\n" +
+					"    20  aload 4 [metadata]\n" +
+					"    22  putfield test.Broken.metadata : java.util.Map [55]\n" +
+					"    25  return\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 1]\n" +
+					"      Method Parameters:\n" +
+					"        externalAccountId\n" +
+					"        productId\n" +
+					"        environment\n" +
+					"        metadata\n" +
+					"    RuntimeInvisibleParameterAnnotations: \n" +
+					"      Number of annotations for parameter 0: 2\n" +
+					"        #8 @test.Schema(\n" +
+					"          #9 description=\"str\" (constant type)\n" +
+					"          #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"        )\n" +
+					"        #14 @test.JsonProperty(\n" +
+					"          #15 value=\"str\" (constant type)\n" +
+					"        )\n" +
+					"      Number of annotations for parameter 1: 2\n" +
+					"        #8 @test.Schema(\n" +
+					"          #9 description=\"str\" (constant type)\n" +
+					"          #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"        )\n" +
+					"        #14 @test.JsonProperty(\n" +
+					"          #15 value=\"str\" (constant type)\n" +
+					"        )\n" +
+					"      Number of annotations for parameter 2: 2\n" +
+					"        #8 @test.Schema(\n" +
+					"          #9 description=\"str\" (constant type)\n" +
+					"          #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"        )\n" +
+					"        #14 @test.JsonProperty(\n" +
+					"          #15 value=\"str\" (constant type)\n" +
+					"        )\n" +
+					"      Number of annotations for parameter 3: 2\n" +
+					"        #8 @test.Schema(\n" +
+					"          #9 description=\"str\" (constant type)\n" +
+					"          #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"        )\n" +
+					"        #14 @test.JsonProperty(\n" +
+					"          #15 value=\"str\" (constant type)\n" +
+					"        )\n" +
+					"\n" +
+					"  Inner classes:\n" +
+					"    [inner class info: #96 java/lang/invoke/MethodHandles$Lookup, outer class info: #98 java/lang/invoke/MethodHandles\n" +
+					"     inner name: #100 Lookup, accessflags: 25 public static final],\n" +
+					"    [inner class info: #101 test/Broken$UpsertEnvironmentDto, outer class info: #1 test/Broken\n" +
+					"     inner name: #103 UpsertEnvironmentDto, accessflags: 25 public static final],\n" +
+					"    [inner class info: #104 test/Schema$RequiredMode, outer class info: #106 test/Schema\n" +
+					"     inner name: #108 RequiredMode, accessflags: 16409 public static final]\n" +
+					"\n" +
+					"Nest Members:\n" +
+					"   #101 test/Broken$UpsertEnvironmentDto\n" +
+					"\n" +
+					"Record: #Record\n" +
+					"Components:\n" +
+					"  \n" +
+					"// Component descriptor #6 Ljava/lang/String;\n" +
+					"java.lang.String externalAccountId;\n" +
+					"  RuntimeInvisibleAnnotations: \n" +
+					"    #8 @test.Schema(\n" +
+					"      #9 description=\"str\" (constant type)\n" +
+					"      #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"    )\n" +
+					"    #14 @test.JsonProperty(\n" +
+					"      #15 value=\"str\" (constant type)\n" +
+					"    )\n" +
+					"// Component descriptor #6 Ljava/lang/String;\n" +
+					"java.lang.String productId;\n" +
+					"  RuntimeInvisibleAnnotations: \n" +
+					"    #8 @test.Schema(\n" +
+					"      #9 description=\"str\" (constant type)\n" +
+					"      #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"    )\n" +
+					"    #14 @test.JsonProperty(\n" +
+					"      #15 value=\"str\" (constant type)\n" +
+					"    )\n" +
+					"// Component descriptor #19 Ltest/Broken$UpsertEnvironmentDto;\n" +
+					"test.Broken$UpsertEnvironmentDto environment;\n" +
+					"  RuntimeInvisibleAnnotations: \n" +
+					"    #8 @test.Schema(\n" +
+					"      #9 description=\"str\" (constant type)\n" +
+					"      #11 requiredMode=test.Schema.RequiredMode.REQUIRED(enum type #12.#17)\n" +
+					"    )\n" +
+					"    #14 @test.JsonProperty(\n" +
+					"      #15 value=\"str\" (constant type)\n" +
+					"    )\n" +
+					"// Component descriptor #21 Ljava/util/Map;\n" +
+					"// Signature: Ljava/util/Map<Ljava/lang/String;Ljava/lang/String;>;\n" +
+					"java.util.Map metadata;\n" +
+					"  RuntimeInvisibleAnnotations: \n" +
+					"    #8 @test.Schema(\n" +
+					"      #9 description=\"str\" (constant type)\n" +
+					"      #11 requiredMode=test.Schema.RequiredMode.NOT_REQUIRED(enum type #12.#13)\n" +
+					"    )\n" +
+					"    #14 @test.JsonProperty(\n" +
+					"      #15 value=\"str\" (constant type)\n" +
+					"    )\n";
+	verifyClassFile(expectedOutput, "test/Broken.class", ClassFileBytesDisassembler.SYSTEM);
+}
+// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4622
+// Inconsistent classfile encountered on annotated generic types
+public void testIssue4622() throws Exception {
+	this.runConformTest(
+		new String[] {
+					"test/Record.java",
+					"""
+					package test;
+
+					import java.lang.annotation.Target;
+
+					public record Record(
+					        Patch<@ValidUrlTemplate(value = UrlValidationType.AA, message = "{}") String> labelUrl) {
+
+					        public static void main(String [] args) {
+						    	System.out.println("OK!");
+						}
+					}
+
+					class Patch<T> {
+					    public T field;
+					}
+
+					enum UrlValidationType {
+					    AA, BB
+					}
+
+					@Target(java.lang.annotation.ElementType.TYPE_USE)
+					@interface ValidUrlTemplate {
+					    UrlValidationType value();
+					    String message();
+					}
+					""",
+	            },
+				"OK!");
+	String expectedOutput =
+					"  // Field descriptor #6 Ltest/Patch;\n" +
+					"  // Signature: Ltest/Patch<Ljava/lang/String;>;\n" +
+					"  private final test.Patch labelUrl;\n" +
+					"    RuntimeInvisibleTypeAnnotations: \n" +
+					"      #10 @test.ValidUrlTemplate(\n" +
+					"        #11 value=test.UrlValidationType.AA(enum type #12.#13)\n" +
+					"        #14 message=\"{}\" (constant type)\n" +
+					"        target type = 0x13 FIELD\n" +
+					"        location = [TYPE_ARGUMENT(0)]\n" +
+					"      )\n" +
+					"  \n" +
+					"  // Method descriptor #17 ([Ljava/lang/String;)V\n" +
+					"  // Stack: 2, Locals: 1\n" +
+					"  public static void main(java.lang.String[] args);\n" +
+					"    0  getstatic java.lang.System.out : java.io.PrintStream [19]\n" +
+					"    3  ldc <String \"OK!\"> [25]\n" +
+					"    5  invokevirtual java.io.PrintStream.println(java.lang.String) : void [27]\n" +
+					"    8  return\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 9]\n" +
+					"        [pc: 8, line: 10]\n" +
+					"      Local variable table:\n" +
+					"        [pc: 0, pc: 9] local: args index: 0 type: java.lang.String[]\n" +
+					"  \n" +
+					"  // Method descriptor #37 ()Ltest/Patch;\n" +
+					"  // Signature: ()Ltest/Patch<Ljava/lang/String;>;\n" +
+					"  // Stack: 1, Locals: 1\n" +
+					"  public test.Patch labelUrl();\n" +
+					"    0  aload_0 [this]\n" +
+					"    1  getfield test.Record.labelUrl : test.Patch [39]\n" +
+					"    4  areturn\n" +
+					"      Line numbers:\n" +
+					"        [pc: 0, line: 6]\n" +
+					"    RuntimeInvisibleTypeAnnotations: \n" +
+					"      #10 @test.ValidUrlTemplate(\n" +
+					"        #11 value=test.UrlValidationType.AA(enum type #12.#13)\n" +
+					"        #14 message=\"{}\" (constant type)\n" +
+					"        target type = 0x14 METHOD_RETURN\n" +
+					"        location = [TYPE_ARGUMENT(0)]\n" +
+					"      )";
+	verifyClassFile(expectedOutput, "test/Record.class", ClassFileBytesDisassembler.SYSTEM);
 }
 }
